--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -871,8 +871,8 @@ section {
   background: #37b3ed;
 }
  */
-iframe {
-  width: 100%;
+iframe:hover {
+  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
 }
 
 @-webkit-keyframes animate-loading {
